# Archero-LSPOSED-Mod

./: .gitignore  Archero-7.9.1-hook-gold-report.md  IL2CPP-runtime-resolution.md  LICENSE  LSPATCH-NONROOT-BUILD.md  README.md  archero_mod_config.low-risk.txt  modmenu_hook_report.txt
.serena/: project.yml
archero_mod/: build.gradle  settings.gradle
archero_mod/app/: build.gradle
archero_mod/app/src/main/: AndroidManifest.xml
archero_mod/app/src/main/assets/: xposed_init
archero_mod/app/src/main/cpp/: CMakeLists.txt  mod.cpp
archero_mod/app/src/main/java/com/archero/mod/: ModEntry.java
archero_mod/app/src/main/res/values/: arrays.xml
docs/: free-story-shield.md
